sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:9: error: '(' expected but identifier found.
				if plusPetit(h,h-1) {
                                   ^AlgGnomeSort:13: error: illegal start of simple expression
			}
                        ^